--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -2,10 +2,10 @@ FROM golang:1.14 as build
 
 RUN apt-get update && apt-get install -y ninja-build
 
-RUN go get -u github.com/tnsts/design-practice-2/build/cmd/bood
+RUN go get -u github.com/roman-mazur/bood/cmd/bood
 
 WORKDIR /go/src/practice-3
 COPY . .
 
-# ENTRYPOINT ["bood", "integration-tests"]
-ENTRYPOINT ["echo", "ok"]
+#ENTRYPOINT ["bood_rebase", "integration-tests"]
+ENTRYPOINT ["bood", "integration-tests"]
