--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -7,13 +7,4 @@ RUN go get -u github.com/tnsts/design-practice-2/build/cmd/bood
 WORKDIR /go/src/practice-3
 COPY . .
 
-RUN CGO_ENABLED=0 bood
-
-# ==== Final image ====
-FROM alpine:3.11
-WORKDIR /opt/practice-3
-COPY --from=build /go/src/practice-3/out/test-results/* ./
-#COPY --from=build /go/src/practice-3/out/bin/* ./
-
-#ENTRYPOINT ["bood_rebase", "integration-tests"]
-ENTRYPOINT ["/opt/practice-3/integration-tests"]
+ENTRYPOINT ["bood", "out/test-results/integration-test.txt"]
