--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,8 +19,8 @@ services:
       - servers
     ports:
       - "8080:8080"
-    # environment:
-    #  - CONF_RESPONSE_DELAY_SEC=2
+    environment:
+     - CONF_RESPONSE_DELAY_SEC=2
 
   server2:
     build: .
@@ -28,8 +28,8 @@ services:
       - servers
     ports:
       - "8081:8080"
-    # environment:
-    #  - CONF_RESPONSE_DELAY_SEC=2
+    environment:
+     - CONF_RESPONSE_DELAY_SEC=2
 
   server3:
     build: .
@@ -37,5 +37,5 @@ services:
       - servers
     ports:
       - "8082:8080"
-    # environment:
-    #  - CONF_RESPONSE_DELAY_SEC=2
+    environment:
+     - CONF_RESPONSE_DELAY_SEC=2
