Integration tests added

--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -21,15 +21,15 @@ services:
 
   server1:
     command: ["server1"]
-    environment:
-     - CONF_RESPONSE_DELAY_SEC=2
+    # environment:
+    #  - CONF_RESPONSE_DELAY_SEC=2
 
   server2:
     command: ["server2"]
-    environment:
-     - CONF_RESPONSE_DELAY_SEC=2
+    # environment:
+    #  - CONF_RESPONSE_DELAY_SEC=2
 
   server3:
     command: ["server3"]
-    environment:
-     - CONF_RESPONSE_DELAY_SEC=2
+    # environment:
+    #  - CONF_RESPONSE_DELAY_SEC=2
