--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,20 @@ go: "1.14"
 notifications:
   email: false
 
-services:
-  - docker
+env:
+  - DOCKER_COMPOSE_VERSION=1.21.2
+
+addons:
+  apt:
+    packages:
+      - docker-ce
+
+before_install:
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+  - docker-compose version
 
 stages:
   - build
@@ -16,7 +28,7 @@ stages:
 
 jobs:
   include:
-    - stage: build
-      script: docker-compose up -d
+    #- stage: build
+    #  script: docker-compose up -d
     - stage: test
       script: docker-compose up -d && docker-compose exec app bash -c "go test ./integration -bench=."
