--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,4 @@ jobs:
     #- stage: build
     #  script: docker-compose up -d
     - stage: test
-      script: docker-compose up -d && docker-compose exec app bash -c "go test ./integration -bench=."
+      script: docker-compose up -d && "go test ./integration -bench=."
