--- a/.travis.yml
+++ b/.travis.yml
@@ -7,28 +7,18 @@ go: "1.14"
 notifications:
   email: false
 
-env:
-  - DOCKER_COMPOSE_VERSION=1.21.2
-
-addons:
-  apt:
-    packages:
-      - docker-ce
-
-before_install:
-  - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
-  - docker-compose version
-
-stages:
-  - build
-  - test
+services:
+  - docker
 
 jobs:
   include:
-    #- stage: build
-    #  script: docker-compose up -d
-    - stage: test
-      script: docker-compose up -d && cd $GOPATH/src/github.com/VictoryKS/design-practice-3/integration && docker-compose exec balancer -c "go test -bench=."
+    - name: Test
+      stage: test
+      script: docker-compose up
+    - script:
+        - sleep 15
+        - cd $GOPATH/src/github.com/VictoryKS/design-practice-3/integration
+        - go test -bench=.
+
+stages:
+  - test
