Integration tests & Travis (#1)
* bood

* Build instructions

* Integration tests added

* Fix bugs

* Travis

Co-authored-by: VictoryKS <victory.kosholap@gmail.com>
Co-authored-by: lesia-s <lesiiasergienko@gmail.com>

--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -16,5 +16,5 @@ services:
   balancer:
     # Для тестів включаємо режим відлагодження, коли балансувальник додає інформацію, кому було відправлено запит.
     command: ["lb", "--trace=true"]
-    environment:
-     - CONF_RESPONSE_DELAY_SEC=20
+    # environment:
+    #  - CONF_RESPONSE_DELAY_SEC=20
