--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -7,4 +7,4 @@ RUN go get -u github.com/tnsts/design-practice-2/build/cmd/bood
 WORKDIR /go/src/practice-3
 COPY . .
 
-ENTRYPOINT [./test.sh]
+ENTRYPOINT ["./test.sh"]
