--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ env:
   GO111MODULE=on
 
 script:
+  - sudo chmod +x test.sh
   - sudo docker-compose -f docker-compose.yaml -f docker-compose.test.yaml up --exit-code-from test
